--- a/pom.xml
+++ b/pom.xml
@@ -36,11 +36,11 @@
 			<version>1.8.1</version>
 		</dependency>
 		<dependency>
-			<groupId>com.google.code.gson</groupId>
-			<artifactId>gson</artifactId>
-			<version>2.8.0</version>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-annotations</artifactId>
+		    <version>2.5.4</version>
 		</dependency>
-
+		
 	</dependencies>
 
 	<build>
